app/assets/stylesheets/task.scss
#task {
  position: relative;
  width: 100%;
  margin-top: 10px;
}

#task_comment {
  font-size: 11px;
}

#taskform .watcher {
  padding-bottom: 3px;
  padding-top: 2px;

  label {
    margin-top: 0px;
    padding: 0px;
    margin-right: 7px;
  }

}

.watcher, .customer, .task_attachment {
  .removeLink {
    float: right;
    display: none;
  }

  &:hover .removeLink {
    display: block;
  }

}

.will_notify {
  background-color: #fff5cc;
}

#taskform #task_customers {
  clear: both;

  .customer {
    margin-left: 85px;
  }

}

#customer_response .removeLink {
  float: right;
}

#taskform .watcher {
  .toggle-link {
    text-decoration: none;
  }

  .label {
    display: none;
  }

  &.is_assigned .label {
    display: inline;
  }

  &:hover .label {
    display: inline;
    background-color: #999;
  }

}


#notify_users {
  clear: both;
  font-size: 0.9em;
  color: #999999;
  background-color: #fff5cc;
}

#taskform #task_addcomment {
  overflow: hidden;
  padding-top: 3px;
  padding-right: 3px;  // space to allow for bootstrap rounded corners and glow
  min-height: 800px;
}

fieldset#task_attachments {
  clear: both;
  padding: 0px;
  margin-bottom: 10px;
}

/* Task edit add comment styling */

#task_attached_files {
  overflow: hidden;
  width: 255px;  // force the block to not get wider with very long filenames
  padding: 10px 0 0 0;
}

fieldset#task_information {
  margin-bottom: 20px;
  padding-top: 0px;
  input[type="submit"] {
    float: left;
    clear: both;
    margin-top: 17px;
  }
  label {
    margin-bottom: 0;
    padding-bottom: 0;
    text-align: left;
  }
  input {
    margin: 0;
    padding: 0;
  }

}

#accessLevel_container {
  float: left;
  margin-left: 40px;
  margin-top: 5px;
  margin-right: 30px;
  div {
    background-image: image-url('toggle_public.png');
    width: 134px;
    height: 21px;
    &.private {
      background-image: image-url('toggle_private.png');
    }

  }
  select {
    visibility: hidden;
    display: none;
  }

}
#upload_container {
  width: 300px;
  float: right;
}
#worktime_container {
  label {
    width: 8em;
  }

}


#add_attachment {
  padding: 4px;
}

#task_time_links {
  float: right;
  padding-top: 16px;
}

// Colours for the task grid

.due_overdue {
  color: red;
  font-weight: bold;
}

.due_soon {
  color: darkgreen;
}

.due_distant {
  // just default colour
}

.due {
  color: darkblue;
  font-weight: bold;
}


/* -------------------- */

#task_history {
  .log_entry {
    border-bottom-style: solid;
    margin-left: 0;
    margin-bottom: 12px;
    margin-right: 0;
    margin-top: 0;
    border-bottom-color: #e5e5e5;
    border-bottom-width: 1px;
    display: block;
    min-height: 65px;
    position: relative;
    clear: both;
    &.access_level_2 {
      border-left: 2px solid #A11;
      .log_timestamp {
        background-image: image-url("padlock.png");
        background-repeat: no-repeat;
        background-position: 65px 3px;
      }

    }
    &.access_level_1 {
    }
    &.log_minor {
      color: #888888;
    }

  }
  padding-top: 20px;
  min-height: 130px;
  margin-left: 0;
  padding-left: 0;
  h4 {
    margin: 0;
  }
  .scm_revision {
    color: #666;
  }
  h4 {
    margin: 0;
  }
  .log_date {
    font-weight: normal;
    padding-left: 0px;
    clear: both;
    display: block;
    color: #666;
  }
  .log_timestamp {
    float: left;
    color: #999999;
    padding-left: 6px;
    font-size: 10px;
    min-height: 65px;
    width: 84px;
  }
  .log_time, .log_worktime {
    display: block;
    font-size: 10px;
  }

  .log_recipients {
    margin-left: 90px;
    color: grey;
    font-size: 0.8em;
  }
  ul.scm_files {
    margin-left: 100px;
    padding-left: 0;
    list-style: none;
    li {
      .state {
        font-weight: bold;
        color: #155;
      }
      .file {
        color: #666;
        font-size: 90%;
        margin-left: 10px;
      }
    }
  }
  .log_name {
    margin-bottom: 0;
    padding-top: 4px;
    font-size: 16px;
    font-weight: 100;
    margin-left: 90px;
  }
  .log_comment {
    margin-left: 90px;
  }
}

/* -------------------- */

#snippet {
  position: relative;
  top: 18px;
  margin-right: 5px;
  overflow: visible;
  text-indent: 0;
}

#snippet-dropdown ul.dropdown-menu {
  top: 35px;
}

#task_addcomment ul.tabs {
  border-bottom: 1px solid #BBBBBB;
  font-size: 80%;
  line-height: normal;
  padding: 4px 10px;
  white-space: nowrap;
  margin-bottom: 0;
}

#dependencies_input_auto_complete ul {
  border: 1px solid #ccc;
  width: 354px;
  padding: 0;
  margin: 0;
  background-color: #fff;
  li {
    border-left: none;
    margin: 0 2px 0 2px;
    padding: 0px;
    width: 350px;
    &.selected {
      background-color: #ffb;
    }

  }

}

.unread_icon {
  display: block;
  width: 12px;
  height: 12px;
  background-image: image-url('unread.png');
  background-position: 0 0;
  background-repeat: no-repeat;
}

label .unread_icon {
  margin: 4px 120px 0px 0px;
  float: right;
}

.read .unread_icon {
  background-position: 0 12px; // disabled state
}

/*  task list page */
.task {
  font-size: 13px;
}

.task-name {
  float: left;
}

.task input, .task_done input, .task_active input {
  margin: 0 0 1px 0px;
}

.task.unread {
  .task-name a {
    font-weight: bold;
  }
  font-weight: bold;
}

.task.unassigned {
  font-weight: bold;
}

.task-icon img {
  height: 16px;
  width: 16px;
  float: left;
  padding-top: 1px;
  padding-right: 2px;
  padding-left: 2px;
}


#task_sidebar {
  width: 260px;
  margin-right: 20px;
  padding-top: 3px;

  legend + .control-group {
    margin-top: 0;
  }

  .control-group {
    margin-bottom: 0;
    clear: both;
  }

  .task_description {
    padding: 0.5em;
    margin: 0;
  }

  .fill {
    margin-bottom: 0.4em;
    margin-right: 0;
    margin-top: 0;
    width: 99%;
  }

  legend {
    margin-bottom: 0;
    border: 0 none;
    padding-top: 10px;
    font-size: 1.5em;
    font-family: 'News Cycle';
  }

  p {
    color: #999;
    margin: 0;
  }

  label {
    float: left;
    clear: both;
    text-align: left;
    margin-right: 0.5em;
    margin-top: 0.5em;
    margin-bottom: 0;
    width: 80px;
    padding: 3px 0;
    color: #999;
  }

  select {
    height: auto;
    margin: 0.5em 0 0.2em;
    padding: 2px;
    width: 152px;
  }

  textarea {
    float: left;
    clear: right;
    text-align: left;
    margin-right: 0.5em;
    margin-bottom: 0.2em;
  }

  input[type="text"] {
    padding: 2px;
    clear: right;
    text-align: left;
    margin-top: 0.5em;
    margin-right: 0.1em;
    margin-bottom: 0.2em;
    width: 145px;

    &.error {
      color: red;
    }
  }
  
  div#target_date {
    float: left;
    margin-right: 0.5em;
    margin-top: 0.5em;
  }

  .text-content {
    padding: 2px;
    margin-top: 0.5em;
    margin-right: 0.1em;
    margin-bottom: 0.2em;
    display: inline-block;
  }
}

#task_sidebar .unknown-email {
  display: block;
  float: left;
  max-width: 150px;
  word-wrap: break-word;
}

#task_sidebar .inactive {
  color: gray;
}

#task_addcomment textarea {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  width: 100%;

  &#task_description {
    margin-bottom: 0.8em;
    min-height: 100px;
  }
  &#comment {
    min-height: 100px;
  }
}


fieldset {
  &.sidebar {
    label {
      width: 95px;
      padding: 3px 0;
    }
    input.text {
      float: right;
      width: 150px;
    }
    textarea {
      height: 40px;
      float: right;
      margin-right: 0.1em;
      width: 149px;
    }

  }
  &#task_information input {
    float: none;
    &.button {
      float: right;
    }

  }
  img.centered {
    float: none;
    clear: both;
  }
  input {
    &.button {
      border: none;
      margin-right: 0.5em;
      margin-bottom: 0.2em;
    }
    &.checkbox {
      float: left;
      clear: right;
      text-align: left;
      margin-right: 0.5em;
      margin-bottom: 0.2em;
      padding-left: 0;
      margin-left: 0;
    }

  }

}

.dependency_no, .resource_no, .field_header {
  clear: both;
  margin: 0.3em 0.5em 0 85px;
}

#task_attachments {
  img {
    float: none;
  }

}

fieldset {
  select.time {
    width: 67px;
  }
  &#task_information select {
    float: none;
  }
  input.file {
    clear: right;
    text-align: left;
    font-size: 90%;
    width: 90%;
    padding-right: 1em;
    margin-top: 0;
    margin-bottom: 0;
  }
  div.buttons {
    padding-top: 0.5em;
  }

}

.task_milestone {
  color: #888888;
}

/* todo styles */
.todo-container {
  ul {
    margin: 0;
  }
  li {
    list-style: none;
    font-size: 11px !important;
  }
  input {
    float: none !important;
  }

}

fieldset#todo {
  input[type="text"] {
    width: 100%;
    margin-top: 0;
  }
  
  img {
    float: none;
    vertical-align: middle;
    padding: 0;
    margin: 0;
    display: inline-block;
    border: 0;
  }

}

#new-todos {
  padding-top: 0.5em;
}

.todo-active {
  cursor: move;
}

.todo-completed {
  color: #a6a6a6;
  .display {
    text-decoration: line-through;
  }

}

.todo-status-link {
  background-color: #c1e6a3;
}

.todo i {
  display: none;
}

.todo:hover i {
  display: inline-block;
}

.todo.editing i {
  display: none;
}

div#snooze_until {
  float: left;
  margin-top: 5px;
  margin-left: 50px;
  margin-right: 100px;
}

#users_to_notify_popup_button {
  cursor: pointer;
}


.task_dependent {
  color: #BBBBBB;
}

/* gantt styles */

#gantt {
  width: 100%;
  margin: 20px auto;
  border: 1px solid #DDD;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

/* task grid */
#task_grid {
  background: white;
  outline: 0;
  border: 1px solid #DDD;
  width: 100%;
  height: 300px;
  overflow: hidden;
  outline: 0px;
  position: relative;
  font-size: 11.5px;
  font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif
}

.unread_icon {
  float: none;
  display: inline-block;
}

.slick-row.unread {
  font-weight: bold;
}

.slick-row.top-next-task {
  background-color: #FFCE8A;
}

.slick-group {
  font-size: 1.5em;
  font-family: 'News Cycle', sans-serif;
  font-weight: bold;
  .itemCount {
    color: grey;
    font-size: 0.8em;
    font-weight: normal;
  }
}

.slick-pager {
  border: 1px solid #F3F3F3;
}

.slick-cell, .slick-cell.active {
  border-color: transparent #eee #eee transparent;
  .defaultValue {
    color: grey;
  }
}

.slick-header-columns, .slick-header-columns {
  background: none;
  border: none;
}

.slick-header.ui-state-default, .slick-headerrow.ui-state-default {
    border: none;
}

.slick-header-column.ui-state-default {
    border-color: #eee;
}

.ui-state-default.slick-header-column {
    font-size: 1em;
}


#nextTasks li {
  margin-bottom: 5px;

  i {
    display: none;
  }
}

#nextTasks li:hover i {
  display: inline-block;
}

#nextTasks_more {
  margin-left: 5px;
}

.task_info {
  font-size: 9px;
}

.cogwheel-menu {
  min-width: 140px;
  overflow: visible;
  display: none;
}

.cogwheel-menu >li {
  padding-left: 25px; 
}

.cogwheel-menu >li:hover {
  cursor: pointer;
  background-color: #007DBD;
  color: white;
  label, li {
    display: block;
    color: black;
    input {
      vertical-align: top;
      margin-right: 5px;
    }
  }
}

.cogwheel-menu >li >ul {
  border-radius: 6px 0px 6px 6px !important;
  li {
    padding-left: 10px;
  }
}

.column-visibility {
  left: -115% !important;  
}

.groupByOptions {
  ul {
    min-width: 130px !important;
    left: -93% !important;
  }
}

.groupByOption {
  padding-left: 30px !important;
}

.groupByOption:hover {
  background-color: #007DBD;
  color: white !important;
}

.groupByTick {
  background: url('tick-mark.png') no-repeat;
  background-position: 5px 3px !important;
}

